fix css layout bug in modal box

--- a/LightBnB_WebApp/public/styles/main.css
+++ b/LightBnB_WebApp/public/styles/main.css
@@ -355,6 +355,10 @@ input,textarea,select {
   padding:13px;
 }
 
+input[type="text"] {
+  width:100%;
+}
+
 #main-content {
   display: flex;
   flex-direction: column;
